[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
serde = "1.0.171"
serde_json = "1.0.103"
worker = "0.0.15"

[profile.release]
lto = true
strip = true
codegen-units = 1
